--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
   <main id="main" class="grid-container grid-container--home">
     <div>
-      <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">Wwlcome to our program
+      <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">Welcome to our program
       <span class="d-block fs-900 ff-serif text-white">Orbit</span></h1>
       
       <p>Ready for a space adventure that goes beyond the ordinary?
