--- a/destination.html
+++ b/destination.html
@@ -180,7 +180,7 @@
     <!-- Here you have to add text about your new destination -->
     <!-- Makemake -->
   
-   <article hidden class="destination-info flow" id="titan-tab" tabindex="0"  role="tabpanel">
+   <article hidden class="destination-info flow" id="makemake-tab" tabindex="0"  role="tabpanel">
       <h2 class="fs-800 uppercase ff-serif">Makemake</h2>
 
       <p>The only moon known to have a dense atmosphere other than Earth, Titan 
